[package]
name = "bing-wall"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.12.1", features = ["json"] }
clap = { version = "4.5.3", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = { version = "1.0.81" }
directories = "5.0.1"
chrono = { version = "0.4.35", features = ["serde"] }